--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,13 @@ html {
   text-decoration: none;
   border-radius: 8px;
   background-color: #333;
-  margin: 3px;
+  margin: 5px;
+  border: 3px solid #333;
 }
 
 .btn:hover {
   background-color: #000;
+  border: 3px solid #000;
 }
 
 .btn-small {
@@ -33,28 +35,33 @@ html {
 
 .btn-subtle {
   background-color: #ccc;
+  border: 3px solid #ccc;
 }
 
 .btn-subtle:hover {
   background-color: #666;
+  border: 3px solid #666;
 }
 
 .btn-ghost {
   background-color: #fff;
-  border: 3px solid #000;
   color: #000;
+  border: 3px solid #000;
 }
 
 .btn-ghost:hover {
   background-color: #666;
   color: #fff;
   border: none;
+  border: 3px solid #666;
 }
 
 .btn-warning {
   background-color: #f33;
+  border: 3px solid #f33;
 }
 
 .btn-warning:hover {
   background-color: #933;
+  border: 3px solid #933;
 }
