--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,14 @@ html {
 
 .btn {
   display: inline-block;
-  padding: .45em 1em .45em 1em;
+  padding: .5rem;
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.125rem;
   color: white;
   text-decoration: none;
   border-radius: 8px;
   background-color: #333;
-  margin: 8px;
+  margin: 6px;
   border: 3px solid #333;
 }
 
